// Vitest Snapshot v1

exports[`Box > renders with custom styles 1`] = `
<div
  class="sc-bcXHqe jOJUyl"
  direction="row"
  width="12/12"
/>
`;

exports[`Box > renders with default style 1`] = `
<div
  class="sc-bcXHqe cihSgD"
  direction="column"
  width="12/12"
/>
`;
